<resources>
    <string name="header_image_desc">Imagen de encabezado para iniciar sesión</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="continuar_con_google">Continuar con Google</string>
    <string name="usuario_o_correo">Usuario o correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="olvide_mi_contrasena">Olvidé mi contraseña</string>
    <string name="no_tienes_cuenta"><![CDATA[¿No tienes una cuenta?]]> <b>Registrate</b></string>
    <string name="app_name">FitnessApp</string>
    <string name="crear_una_cuenta">Crear una cuenta</string>
    <string name="ya_tienes_cuenta"><![CDATA[¿Ya tienes cuenta?]]> <b>Iniciar Sesión</b> </string>
    <string name="titulo_formulario_salud">Información de Salud y Hábitos</string>
    <string name="descripcion_formulario_salud">Completa este formulario para adaptar la rutina a tus necesidades de salud y objetivos de entrenamiento</string>
    <string name="frecuencia_ejercicio">¿Con qué frecuencia haces ejercicio?\n</string>
    <string name="frecuencia_raramente">Raramente (0-1 veces por semana)</string>
    <string name="frecuencia_ocasionalmente">Ocasionalmente (2-3 veces por semana)</string>
    <string name="frecuencia_frecuentemente">Frecuentemente (4-5 veces por semana)</string>
    <string name="frecuencia_diario">Diario (6-7 veces por semana)</string>
    <string name="condicion_medica">¿Tienes alguna condición médica?</string>
    <string name="selecciona_todas_apliquen">Selecciona todas las que apliquen</string>
    <string name="condicion_hipertension">Hipertensión</string>
    <string name="condicion_diabetes">Diabetes</string>
    <string name="condicion_espalda">Problemas de espalda</string>
    <string name="condicion_rodilla">Problemas de rodilla</string>
    <string name="condicion_ninguna">Ninguna de las anteriores</string>
    <string name="objetivos_entrenamiento">¿Cuáles son tus objetivos de entrenamiento?</string>
    <string name="objetivo_perder_peso">Perder peso</string>
    <string name="objetivo_ganar_musculo">Ganar músculo</string>
    <string name="objetivo_mejorar_resistencia">Mejorar resistencia</string>
    <string name="objetivo_aumentar_flexibilidad">Aumentar flexibilidad</string>
    <string name="objetivo_reducir_estres">Reducir estres</string>
    <string name="continuar">Continuar</string>
    <string name="nivel_correr">Correr</string>
    <string name="nivel_comida">Alimentación</string>
    <string name="fuerza">Fuerza\n</string>
    <string name="Salud">Salud\n</string>
    <string name="nivel_pesas">Fuerza</string>
    <string name="nivel_dormir">Descansar</string>
    <string name="nav_home">Inicio</string>
    <string name="nav_progress">Racha</string>
    <string name="nav_profile">Perfil</string>
    <string name="name">Nombre</string>
    <string name="gender">Genero</string>
    <string name="male">Masculino</string>
    <string name="female">Femenino</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="save">Guardar</string>
    <string name="introduce_tu_nombre">Introduce tu nombre</string>
    <string name="masculino">masculino\n</string>
    <string name="femenino">femenino</string>
    <string name="nobinario">Otro</string>
    <string name="introduce_tu_altura">introduce tu altura\n</string>
    <string name="introduce_tu_peso">Introduce tu peso\n</string>
    <string name="introduce_tu_edad">Introduce tu edad</string>
    <string name="_01">01</string>
    <string name="tu_progreso">Tu progreso</string>
    <string name="racha_actual_0_d_as">Racha actual: 0 días</string>
    <string name="logout">Cerrar sesión</string>
</resources>