<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <!-- Imagen de Encabezado -->
    <ImageView
        android:id="@+id/headerImage"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/login"
        android:contentDescription="@string/header_image_desc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="centerCrop"/>

    <!-- Título "Iniciar sesión" -->
    <TextView
        android:id="@+id/titleText"
        style="@style/WorkSansBoldMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        app:layout_constraintTop_toBottomOf="@id/headerImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Botón de "Continuar con Google" -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/googleButton"
        style="@style/WorkSansRegular20"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:icon="@drawable/google"
        android:text="@string/continuar_con_google"
        android:textColor="?android:textColorPrimary"
        android:iconTint="?android:textColorPrimary"
        android:backgroundTint="@android:color/transparent"
        app:strokeColor="?android:textColorPrimary"
        app:strokeWidth="1dp"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <!-- Campo de texto para "Usuario o correo electrónico" -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/usuario_o_correo"
        app:layout_constraintTop_toBottomOf="@id/googleButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            style="@style/WorkSansRegular18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo de texto para "Contraseña" -->
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena"
            app:layout_constraintTop_toBottomOf="@id/emailLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            style="@style/WorkSansRegular18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Texto de "Olvidé mi contraseña" -->
    <TextView
        android:id="@+id/forgotPasswordText"
        style="@style/WorkSansRegular15Gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olvide_mi_contrasena"
        app:layout_constraintTop_toBottomOf="@id/passLayout"
        app:layout_constraintEnd_toEndOf="@id/passLayout"
        android:layout_marginTop="4dp"/>

    <!-- Botón "Iniciar sesión" -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        style="@style/WorkSansBold20"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        android:backgroundTint="?android:textColorPrimary"
        android:textColor="?android:colorBackground"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"/>

    <!-- Texto de registro -->
    <TextView
        android:id="@+id/registerText"
        style="@style/WorkSansRegular15Gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_tienes_cuenta"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>

