<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Sección 1 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/sports"
                    android:contentDescription="@string/nivel_correr"
                    android:layout_marginBottom="24dp"/>
            </LinearLayout>

            <!-- Conexión entre Nodos -->
            <View
                android:layout_width="2dp"
                android:layout_height="50dp"
                android:background="@color/subtext"
                android:layout_gravity="center_horizontal"/>

            <!-- Sección 2 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/cutlery"
                    android:contentDescription="@string/nivel_comida"
                    android:layout_marginBottom="24dp"/>
            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="50dp"
                android:background="@color/subtext"
                android:layout_gravity="center_horizontal"/>

            <!-- Sección 3 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/fitness"
                    android:contentDescription="@string/fuerza"
                    android:layout_marginBottom="24dp"/>

            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="50dp"
                android:background="@color/subtext"
                android:layout_gravity="center_horizontal"/>

            <!-- Sección 4 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/heart"
                    android:contentDescription="@string/Salud"
                    android:layout_marginBottom="24dp"/>

            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="50dp"
                android:background="@color/subtext"
                android:layout_gravity="center_horizontal"/>

            <!-- Sección 5 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/dumbbell"
                    android:contentDescription="@string/nivel_pesas"
                    android:layout_marginBottom="24dp"/>

            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="50dp"
                android:background="@color/subtext"
                android:layout_gravity="center_horizontal"/>

            <!-- Sección 6 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/sleep"
                    android:contentDescription="@string/nivel_dormir"
                    android:layout_marginBottom="24dp"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_gravity="bottom"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:menu="@menu/bottom_nav_menu"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

